<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/searchBar"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="50"
            android:drawableStart="@drawable/action_search"
            android:hint="@string/enter_address"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:singleLine="true"
            android:text="@string/enter_address"
            android:theme="@android:style/Theme.Material.Light" />

        <Button
            android:id="@+id/currentLocation"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/device_access_location_found" />
    </LinearLayout>

    <TextView
        android:id="@+id/typeslabel"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/places_types"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/typesValue"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/none"
        android:textSize="12sp"
        android:theme="@android:style/Theme.Material.Light"
        android:background="#ff848dff"
        android:textColor="#ffebebeb" />

    <TextView
        android:id="@+id/distanceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/search_radius_5km"
        android:textSize="14sp"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/distanceSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="10"
         android:progress="5"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:theme="@android:style/Theme.Light" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal"
        android:visibility="visible"
        android:weightSum="12" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:text="@string/_0"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:text="@string/_2"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:text="@string/_4"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:text="@string/_6"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:text="@string/_8"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:text="@string/_10"
            android:textColor="@android:color/black"
            android:textStyle="bold" />
    </LinearLayout>
    <TextView
        android:id="@+id/defaultText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/no_data_found"
        android:textAlignment="center"
        android:textSize="14sp"/>
    <ListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    	android:divider="#b5b5b5"
        android:dividerHeight="1dp"
        android:cacheColorHint="#00000000"
        android:theme="@android:style/Theme.Material.Light" />

</LinearLayout>